[tool.poetry]
name = "benchmarking"
version = "0.0.1"
description = "Tooling for benchmarking Ghostwriter"
authors = ["Hendrik Makait <hendrik.makait@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^2.11.0"
click = "^8.1.3"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ysb="benchmarking.benchmarks.ysb:main"
throughput="benchmarking.benchmarks.throughput:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
