[tool.poetry]
name = "benchmarking"
version = "0.0.1"
description = "Tooling for benchmarking Ghostwriter"
authors = ["Hendrik Makait <hendrik.makait@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^2.11.0"
click = "^8.1.3"
scp = "^0.14.5"
tenacity = "^8.2.3"
pyzmq = "25.1.2"
[tool.poetry.dev-dependencies]
jupyterlab = "^3.6.1"
seaborn = "^0.12.1"

[tool.poetry.scripts]
ysb="benchmarking.benchmarks.ysb:main"
sustainable = "benchmarking.benchmarks.ysb:sustainable_throughput_suite"
throughput="benchmarking.benchmarks.throughput:sustainable_throughput_suite"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
